lab14/my-first-helm-chart/templates/application.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myjavaapp
      app.kubernetes.io/component: myjavaapp
      app.kubernetes.io/instance: myjavaapp
    name: fuse-java-openshift-jdk17-rhel8
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: registry.redhat.io/fuse7/fuse-java-openshift-jdk17-rhel8:1.13-14.1733302831
      from:
        kind: DockerImage
        name: registry.redhat.io/fuse7/fuse-java-openshift-jdk17-rhel8:1.13-14.1733302831
      generation: null
      importPolicy:
        importMode: Legacy
      name: 1.13-14.1733302831
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myjavaapp
      app.kubernetes.io/component: myjavaapp
      app.kubernetes.io/instance: myjavaapp
    name: myjavaapp
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myjavaapp
      app.kubernetes.io/component: myjavaapp
      app.kubernetes.io/instance: myjavaapp
    name: myjavaapp
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: myjavaapp:latest
    postCommit: {}
    resources: {}
    source:
      contextDir: /lab13/SpringBasicRefresherApp
      git:
        uri: https://github.com/arunprabhur/EX288.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: fuse-java-openshift-jdk17-rhel8:1.13-14.1733302831
      type: Source
    triggers:
    - github:
        secret: PhUga791RqwVqHs8AbNs
      type: GitHub
    - generic:
        secret: Pfnq93f05ovdsn4cuNQI
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"myjavaapp:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"myjavaapp\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myjavaapp
      app.kubernetes.io/component: myjavaapp
      app.kubernetes.io/instance: myjavaapp
    name: myjavaapp
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: myjavaapp
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: myjavaapp
      spec:
        containers:
        - image: ' '
          name: myjavaapp
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          - containerPort: 9779
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: myjavaapp
      app.kubernetes.io/component: myjavaapp
      app.kubernetes.io/instance: myjavaapp
    name: myjavaapp
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    - name: 9779-tcp
      port: 9779
      protocol: TCP
      targetPort: 9779
    selector:
      deployment: myjavaapp
  status:
    loadBalancer: {}
kind: List
metadata: {}
